# labelmecpp

./: README.md
app/: CMakeLists.txt  LabelMe.pro
app/include/: CentralWidget.h
app/libs/: libCentralWidget.1.0.0.dylib  libCentralWidget.1.0.dylib
app/src/: label.cpp  mainwindow.cpp
